--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "migrate": "npm run build && node dist/db/migrate.js",
-    "start": "node dist/index.js"
+    "start": "node ./dist/index.js"
   },
   "engines": {
     "node": "17.x"
