--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js"
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "nodemon -e ts --watch src .env --exec \"tsc --incremental && node dist/index.js\""
   },
   "author": "Shadman",
   "license": "ISC",
@@ -15,15 +18,19 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3",
+    "sharp": "^0.31.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.6.4",
     "@types/pg": "^8.6.5",
+    "@types/sharp": "^0.31.0",
     "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.18",
     "tslint": "^6.1.3",
